# kpdf

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  TODO.md  create_file_icons.py  create_icon.py  create_test_pdfs.py  environment.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  release-build.yml
src/kpdf/: __init__.py  config.py  main.py
src/kpdf/operations/: __init__.py  batch_processor.py  image_converter.py  pdf_compressor.py  pdf_extractor.py  pdf_merger.py  pdf_rotator.py  pdf_splitter.py
src/kpdf/ui/: __init__.py  job_monitor.py  main_window.py
src/kpdf/utils/: __init__.py  error_handler.py  logging_config.py  validators.py
tests/: test_batch.py  test_compress.py  test_extract.py  test_images.py  test_merge.py  test_operations.py  test_rotate.py  test_smoke.py  test_split.py
