[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpdf"
version = "1.0.0"
description = "Windows desktop PDF utility"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "kPDF" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
